--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py27,py38,py39,py310,py311,py312,py313,pypy2,pypy3}-{macos,win,linux},py312-apsw-linux
+envlist = {py27,py39,py310,py311,py312,py313,pypy2,pypy3}-{macos,win,linux},py313-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
@@ -7,7 +7,6 @@ tox>=4
 [gh-actions]
 python =
     2.7: py27
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
@@ -34,16 +33,16 @@ deps =
     igo-python
     py27,pypy2: pathlib
     py27,pypy2: janome<0.4
-    py{38,39,310},pypy3: janome
+    py{39,310,311,312,313},pypy3: janome
     tinysegmenter
     faker
-    py{27,38,39,310,311,312}-linux,pypy3-linux: mecab
-    py{38,39,310,311,312}-linux,pypy3-linux: natto-py
+    py{27,39,310,311,312,313}-linux,pypy3-linux: mecab
+    py{39,310,311,312,313}-linux,pypy3-linux: natto-py
     py27-linux: natto-py<1.0
 commands=
     py.test -svrx
 
-[testenv:py312-apsw-linux]
+[testenv:py313-apsw-linux]
 commands=
     pip install apsw>=3.46.1.0
     py.test -svrx
