try to put env to the top level

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,6 +6,12 @@ on: [push]
 #  pull_request:
 #    branches: [ master ]
 
+env:
+  # pre-built wheel from https://pypi.org/project/mecab/ defaults to /usr/local/etc/mecabrc
+  # but mecab from ubuntu uses /etc/mecabrc
+  # mecab is only used for testing on Linux, should be harmless to define globally
+  MECABRC: /etc/mecabrc
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -47,7 +53,3 @@ jobs:
       - name: Test with tox
         run: |
           tox
-        env:
-          # pre-built wheel from https://pypi.org/project/mecab/ defaults to /usr/local/etc/mecabrc
-          # but mecab from ubuntu uses /etc/mecabrc
-          MECABRC: /etc/mecabrc
