--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,9 @@ include = [
   "sqlitefts/py.typed",
   "tests/**",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
