--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,16 @@
 [tox]
-envlist = {py27,py39,py310,py311,py312,py313,pypy2,pypy3}-{macos,win,linux},py313-apsw-linux
+envlist = {py39,py310,py311,py312,py313,pypy3}-{macos,win,linux},py313-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
 
 [gh-actions]
 python =
-    2.7: py27
     3.9: py39
     3.10: py310
     3.11: py311
     3.12: py312
     3.13: py313
-    pypy-2: pypy2
     pypy-3: pypy3
 
 [gh-actions:env]
@@ -31,14 +29,11 @@ platform =
 deps =
     pytest
     igo-python
-    py27,pypy2: pathlib
-    py27,pypy2: janome<0.4
     py{39,310,311,312,313},pypy3: janome
     tinysegmenter
     faker
-    py{27,39,310,311,312,313}-linux,pypy3-linux: mecab
+    py{39,310,311,312,313}-linux,pypy3-linux: mecab
     py{39,310,311,312,313}-linux,pypy3-linux: natto-py
-    py27-linux: natto-py<1.0
 commands=
     py.test -svrx
 
