set index as needed

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,4 @@ jobs:
         run: uv run --isolated --no-project -p 3.13 --with dist/*.whl --with pytest pytest tests/test_base.py
       - name: Smoke test (source distribution)
         run: uv run --isolated --no-project -p 3.13 --with dist/*.tar.gz --with pytest pytest tests/test_base.py
-      - run: uv publish --index testpypi --trusted-publishing always
+      - run: uv publish --trusted-publishing always ${{ !contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v') && '' || '--index testpypi' }}
