--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,15 @@ on:
   release:
     types:
       - "published"
+env:
+  TARGET_INDEX: ${{ !contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v') && 'pypi' || 'testpypi' }}
 
 jobs:
   pypi:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     environment:
-      name: ${{ !contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v') && 'pypi' || 'testpypi' }}
+      name: ${{ env.TARGET_INDEX }}
     permissions:
       id-token: write
     steps:
@@ -24,4 +26,4 @@ jobs:
         run: uv run --isolated --no-project -p 3.13 --with dist/*.whl --with pytest pytest tests/test_base.py
       - name: Smoke test (source distribution)
         run: uv run --isolated --no-project -p 3.13 --with dist/*.tar.gz --with pytest pytest tests/test_base.py
-      - run: uv publish --trusted-publishing always ${{ !contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v') && '' || '--index testpypi' }}
+      - run: uv publish --trusted-publishing always ${{ env.TARGET_INDEX == 'testpypi') && '--index testpypi' }}
