try matrix instead

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,22 @@ on:
   release:
     types:
       - "published"
-env:
-  TARGET_INDEX: ${{ !contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v') && 'pypi' || 'testpypi' }}
 
 jobs:
-  pypi:
+  publish:
+    strategy:
+      matrix:
+       environment:
+         - pypi
+         - testpypi
+       exclude:
+         - environment: ${{ !startsWith(github.ref_name, 'v') && 'pypi' }}
+         - environment: ${{ contains(github.ref_name, 'test') && 'pypi' }}
+         - environment: ${{ (!contains(github.ref_name, 'test') && startsWith(github.ref_name, 'v')) || 'testpypi' }}
     name: Publish to PyPI
     runs-on: ubuntu-latest
     environment:
-      name: ${{ env.TARGET_INDEX }}
+      name: ${{ matrix.environment }}
     permissions:
       id-token: write
     steps:
@@ -26,4 +33,4 @@ jobs:
         run: uv run --isolated --no-project -p 3.13 --with dist/*.whl --with pytest pytest tests/test_base.py
       - name: Smoke test (source distribution)
         run: uv run --isolated --no-project -p 3.13 --with dist/*.tar.gz --with pytest pytest tests/test_base.py
-      - run: uv publish --trusted-publishing always ${{ env.TARGET_INDEX == 'testpypi') && '--index testpypi' }}
+      - run: uv publish --trusted-publishing always ${{ matrix.environment == 'testpypi' && '--index testpypi' }}
