--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sqlitefts"
-version = "1.0.0"
+version = "1.0.dev0"
 description = "A Python binding for tokenizers of SQLite Full Text Search"
 authors = [{ name = "Hideaki Takahashi", email = "mymelo@gmail.com" }]
 dependencies = [
@@ -8,7 +8,7 @@ dependencies = [
     "cffi>=1.15.1 ; platform_python_implementation != 'PyPy'",
 ]
 readme = "README.rst"
-requires-python = ">=2.7,>=3.9,<4"
+requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4,!=3.5,!=3.6"
 license = { text = "MIT" }
 keywords = [
   "SQLite",
@@ -67,3 +67,9 @@ include = [
   "sqlitefts/py.typed",
   "tests/**",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
