--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,14 @@
 [project]
 name = "sqlitefts"
-version = "1.0.1"
+version = "2.0.dev"
 description = "A Python binding for tokenizers of SQLite Full Text Search"
 authors = [{ name = "Hideaki Takahashi", email = "mymelo@gmail.com" }]
 dependencies = [
     "cffi>=2.0.0; python_version >= '3.14'",
-    "cffi>=1.17.0; python_version >= '3.9'",
-    "cffi>=1.15.1 ; platform_python_implementation != 'PyPy'",
+    "cffi>=1.17.0 ; platform_python_implementation != 'PyPy'",
 ]
 readme = "README.rst"
-requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4,!=3.5,!=3.6,!=3.7,!=3.8"
+requires-python = ">=3.10, <4"
 license = { text = "MIT" }
 keywords = [
   "SQLite",
@@ -26,7 +25,6 @@ classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
-  "Programming Language :: Python :: 2.7",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
