--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,6 +25,12 @@ jobs:
           - python-version: "3.13"
             os: windows-11-arm
             experimental: false
+          - python-version: "3.14t"
+            os: ubuntu-latest
+            experimental: true
+          - python-version: "3.14t"
+            os: ubuntu-24.04-arm
+            experimental: true
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python ${{ matrix.python-version }}
