--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {py39,py310,py311,py312,py313,pypy3}-{macos,win,linux},py313-apsw-linux
+envlist = {py39,py310,py311,py312,py313,py314,py314t,pypy3}-{macos,win,linux},py313-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
@@ -11,6 +11,8 @@ python =
     3.11: py311
     3.12: py312
     3.13: py313
+    3.14: py314
+    3.14: py314t
     pypy-3: pypy3
 
 [gh-actions:env]
@@ -32,8 +34,8 @@ deps =
     py{39,310,311,312,313},pypy3: janome
     tinysegmenter
     faker
-    py{39,310,311,312,313}-linux,pypy3-linux: mecab
-    py{39,310,311,312,313}-linux,pypy3-linux: natto-py
+    py{39,310,311,312,313,314,314t}-linux,pypy3-linux: mecab
+    py{39,310,311,312,313,314,314t}-linux,pypy3-linux: natto-py
 commands=
     py.test -svrx
 
