--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = {py39,py310,py311,py312,py313,py314,py314t,pypy3}-{macos,win,linux},py313-apsw-linux
+envlist = {py310,py311,py312,py313,py314,py314t,pypy3}-{macos,win,linux},py313-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
 
 [gh-actions]
 python =
-    3.9: py39
     3.10: py310
     3.11: py311
     3.12: py312
@@ -31,11 +30,11 @@ platform =
 deps =
     pytest
     igo-python
-    py{39,310,311,312,313},pypy3: janome
+    py{310,311,312,313},pypy3: janome
     tinysegmenter
     faker
-    py{39,310,311,312,313,314,314t}-linux,pypy3-linux: mecab
-    py{39,310,311,312,313,314,314t}-linux,pypy3-linux: natto-py
+    py{310,311,312,313,314,314t}-linux,pypy3-linux: mecab
+    py{310,311,312,313,314,314t}-linux,pypy3-linux: natto-py
 commands=
     py.test -svrx
 
