--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          ["3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.10"]
+          ["3.10", "3.11", "3.12", "3.13", "pypy3.10"]
         experimental: [false]
         include:
           - python-version: "3.13"
