--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,15 @@ skip_missing_interpreters = true
 requires =
 tox>=4
 
+[gh]
+python =
+    3.14t = 3.14t
+    3.14 = 3.14
+    3.13 = 3.13
+    3.12 = 3.12
+    3.11 = 3.11
+    3.10 = 3.10
+
 [gh-actions]
 python =
     3.10: py310
