--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -37,6 +37,15 @@ jobs:
           - python-version: "3.14t"
             os: ubuntu-24.04-arm
             experimental: true
+          - python-version: "3.14t"
+            os: windows-latest
+            experimental: true
+          - python-version: "3.14t"
+            os: windows-11-arm
+            experimental: true
+          - python-version: "3.14t"
+            os: macos-latest
+            experimental: true
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python ${{ matrix.python-version }}
