--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,17 @@
 [tox]
-envlist = {py39,py310,py311,py312,py313,pypy3}-{macos,win,linux},py313-apsw-linux
+envlist = {py310,py311,py312,py313,py314,py314t,pypy3}-{macos,win,linux},py313-apsw-linux
 skip_missing_interpreters = true
 requires =
 tox>=4
 
-[gh-actions]
+[gh]
 python =
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
-    3.13: py313
-    pypy-3: pypy3
-
-[gh-actions:env]
-PLATFORM =
-    ubuntu-latest: linux
-    macos-latest: macos
-    windows-latest: windows
+    3.14t = py314t
+    3.14 = py314
+    3.13 = py313
+    3.12 = py312
+    3.11 = py311
+    3.10 = py310
 
 [testenv]
 changedir = tests
@@ -29,11 +23,11 @@ platform =
 deps =
     pytest
     igo-python
-    py{39,310,311,312,313},pypy3: janome
+    py{310,311,312,313},pypy3: janome
     tinysegmenter
     faker
-    py{39,310,311,312,313}-linux,pypy3-linux: mecab
-    py{39,310,311,312,313}-linux,pypy3-linux: natto-py
+    py{310,311,312,313,314,314t}-linux,pypy3-linux: mecab
+    py{310,311,312,313,314,314t}-linux,pypy3-linux: natto-py
 commands=
     py.test -svrx
 
