--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
 ]
 readme = "README.rst"
 requires-python = ">=3.10, <4"
-license = { text = "MIT" }
+license = "MIT"
+license-files = ["LICENSE"]
 keywords = [
   "SQLite",
   "Full-text",
@@ -47,8 +48,8 @@ build-backend = "uv_build"
 module-name = "sqlitefts"
 module-root = ""
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "mypy>=1.11.2 ; python_version >= '3.13'",
     "faker>=30.0.0 ; python_full_version >= '3.13'",
     "pytest>=8.3.2 ; python_version >= '3.13'",
