--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version:
-          ["3.10", "3.11", "3.12", "3.13", "pypy3.11"]
+          ["3.10", "3.11", "3.12", "3.13", "3.14", "3.14t", "pypy3.11"]
         experimental: [false]
         include:
           - python-version: "3.13"
@@ -26,35 +26,17 @@ jobs:
             os: windows-11-arm
             experimental: false
           - python-version: "3.14"
-            os: ubuntu-latest
-            experimental: true
-          - python-version: "3.14"
             os: ubuntu-24.04-arm
-            experimental: true
-          - python-version: "3.14"
-            os: windows-latest
-            experimental: true
+            experimental: false
           - python-version: "3.14"
             os: windows-11-arm
-            experimental: true
-          - python-version: "3.14"
-            os: macos-latest
-            experimental: true
-          - python-version: "3.14t"
-            os: ubuntu-latest
-            experimental: true
+            experimental: false
           - python-version: "3.14t"
             os: ubuntu-24.04-arm
-            experimental: true
-          - python-version: "3.14t"
-            os: windows-latest
-            experimental: true
+            experimental: false
           - python-version: "3.14t"
             os: windows-11-arm
-            experimental: true
-          - python-version: "3.14t"
-            os: macos-latest
-            experimental: true
+            experimental: false
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python ${{ matrix.python-version }}
